Добавила базу с новой таблицей ФОТО

--- a/MilanaZhiganshina320_SR/MilanaZhiganshina320_SR.csproj
+++ b/MilanaZhiganshina320_SR/MilanaZhiganshina320_SR.csproj
@@ -109,6 +109,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\PlusFotoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\AuthorizationPage.xaml.cs">
@@ -116,6 +120,9 @@
     </Compile>
     <Compile Include="Pages\GlavPage.xaml.cs">
       <DependentUpon>GlavPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\PlusFotoPage.xaml.cs">
+      <DependentUpon>PlusFotoPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
