--- a/MilanaZhiganshina320_SR/App.config
+++ b/MilanaZhiganshina320_SR/App.config
@@ -8,8 +8,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="PM_SREntities" connectionString="metadata=res://*/DB.Model1.csdl|res://*/DB.Model1.ssdl|res://*/DB.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-T2ETA51T;initial catalog=PM_SR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  
+  
+  <add name="PM_SREntities" connectionString="metadata=res://*/DB.Model1.csdl|res://*/DB.Model1.ssdl|res://*/DB.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-T2ETA51T;initial catalog=PM_SR;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
